--- a/src/style/about.css
+++ b/src/style/about.css
@@ -92,6 +92,7 @@ p {
 .about-section h2 {
     justify-content: center;
     text-align: center;
+    font-family: Circular Bold;
 }
 
 .about-section > .icon {
