--- a/src/style/admin/adminproduct.css
+++ b/src/style/admin/adminproduct.css
@@ -55,7 +55,6 @@ form input[type='submit']:hover{
 }
 
 .editProd, .delProd{
-    background-color: var(--button3);
     font-size: smaller;
     border-radius: 40px;
     border-style: none;
@@ -63,6 +62,14 @@ form input[type='submit']:hover{
     width: 75px;
     box-shadow: 0 1px 8px var(--shadow-1);
     margin: 5px;
+}
+
+.editProd {
+    background-color: var(--hover);
+}
+
+.delProd {
+    background-color: rgb(160, 160, 160);
 }
 
 .editProd:hover{
