--- a/src/style/admin/adminusers.css
+++ b/src/style/admin/adminusers.css
@@ -1,23 +1,3 @@
-/* .userTable {
-  width: 100%;
-  border-collapse: collapse;
-}
-  
-.userTable th, .userTable td {
-  border: 1px solid #dddddd;
-  padding: 8px;
-}
-  
-.userTable th {
-  text-align: left;
-  background-color: var(--button1);
-}
-  
-.userTable tr:nth-child(even) {
-  background-color: #dddddd;
-} */
-
-
 .user-container{
   display: flex;
   justify-content: center;
@@ -25,12 +5,16 @@
   flex-wrap: wrap;
 }
 
+#blur.active{
+  filter: blur(5px);
+}
+
 .user-cards{
   background-color: rgb(238, 237, 237);
   box-shadow: 0 2px 8px var(--shadow-1);
   border-radius: 10px;
   width: 250px;
-  height: 300px;
+  height: 80px;
   margin: 10px;
   padding: 15px;
   overflow: hidden;
@@ -38,12 +22,22 @@
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
+  text-align: center;
+}
+
+.user-cards:hover{
+  cursor: pointer;
 }
 
 .user-cards p {
   font-size: smaller;
   font-style: italic;
-  justify-content: left;
+  justify-content: center;
+}
+
+.user-cards h3 {
+  font-family: Circular Bold;
+  color: var(--hover);
 }
 
 .user-img {
@@ -58,4 +52,60 @@
 .user-img img {
   width: 150%;
   object-fit: cover;  
+}
+
+.popup-cards{
+  background-color: rgb(238, 237, 237);
+  box-shadow: 0 2px 8px var(--shadow-1);
+  border-radius: 10px;
+  /* width: 250px; */
+  height: 300px;
+  margin: 10px;
+  padding: 15px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.popup-cards h3 {
+  color: var(--hover);
+  font-family: Circular Bold;
+}
+
+.popup-cards p {
+  font-size: smaller;
+  font-style: italic;
+  justify-content: left;
+}
+
+#popup {
+  position:fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  height: 500px;
+  padding: 50px;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, .30);
+  overflow-y: scroll;
+  background-color: white;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+  border-radius: 10px;
+}
+
+#popup.active{
+  visibility: visible;
+  opacity: 1;
+  transition: 0.5s;
+}
+
+#popup > h3 {
+  font-family: Circular Bold;
+  color: var(--hover);
+  text-align: center;
+  font-size: 2em;
 }
