--- a/src/style/customer/customerorder.css
+++ b/src/style/customer/customerorder.css
@@ -41,9 +41,15 @@
     color: white;
 }
 
-.prodName{
-    font-size: large;
-    font-weight: bold;
+.orderCard h3{
+    color: var(--hover);
+    font-family: Circular Bold;
+}
+
+.orderCard p {
+    font-size: smaller;
+    font-style: italic;
+    justify-content: left;
 }
 
 .status{
