--- a/src/style/customer/customerproduct.css
+++ b/src/style/customer/customerproduct.css
@@ -81,6 +81,11 @@
     flex-wrap: wrap;
 }
 
+.product-cards h3 {
+    color: var(--hover);
+    font-family: Circular Bold;
+}
+
 .product-cards p {
     font-size: smaller;
     font-style: italic;
