--- a/src/style/admin/adminusers.css
+++ b/src/style/admin/adminusers.css
@@ -7,6 +7,7 @@
 
 #blur.active{
   filter: blur(5px);
+  transform: 0.5s;
 }
 
 .user-cards{
@@ -89,7 +90,6 @@
   height: 450px;
   padding: 15px;
   box-shadow: 0 5px 30px rgba(0, 0, 0, .30);
-  
   background-color: white;
   visibility: hidden;
   opacity: 0;
