--- a/src/style/admin/adminproduct.css
+++ b/src/style/admin/adminproduct.css
@@ -26,28 +26,6 @@
     padding: 0px 10px;
 }
 
-form input{
-    margin: 10px 0px;
-}
-
-form input[type='submit'] {
-    background-color: black;
-    font-weight: bold;
-    border-radius: 40px;
-    border-style: none;
-    padding: 15px;
-    width: 100%;
-    color: white;
-    margin-bottom: 10px;
-    box-shadow: 0 4px 8px var(--shadow-1);
-    cursor: pointer;
-}
-
-form input[type='submit']:hover{
-    background-color: var(--hover);
-    color: black;
-}
-
 .btn {
     display: flex;
     justify-content: center;
@@ -67,14 +45,18 @@ form input[type='submit']:hover{
 }
 
 .editProd {
-    background-color: var(--hover);
+    background-color: var(--button1);
 }
 
 .delProd {
+    background-color: rgb(199, 198, 198);
+}
+
+.delProd:hover {
     background-color: rgb(184, 184, 184);
 }
 
 .editProd:hover{
     background-color: var(--hover);
-    color: black;
+    color: white;
 }
