--- a/src/style/customer/customerhome.css
+++ b/src/style/customer/customerhome.css
@@ -2,8 +2,9 @@
 
 .navUser {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
+    flex: 1;
 }
 
 .navUser > * {
@@ -19,29 +20,17 @@
     height: 30px;
     width: 100px;
     box-shadow: 0 4px 8px var(--shadow-1);
+    cursor: pointer;
 }
 
 .navUser > button:hover{
     background-color: var(--hover);
-    color: black;
-}
-
-.navLinks {
-    display: flex;
-    align-items: center;
-    flex-grow: 2;
-    padding-left: 20px ;
-    font-weight: bolder;
+    color: white;
 }
 
 .profile:hover{
     transform: scale(1.1);
     transition: transform 0.3s ease;
-}
-
-.headerCustomer{
-    height: 80px;
-    background-color: #AFBC88;
 }
 
 .titleCustomer{
@@ -50,9 +39,9 @@
     padding: 10px;
 }
 
-hr {
-    border-top: 5px solid #bbb;
-    border-radius: 5px;
+.titleCustomer > h1 {
+    font-family: Circular Bold;
+    color: var(--hover);
 }
 
 /* for cards */
@@ -91,6 +80,7 @@ hr {
     height: 30px;
     width: 150px;
     box-shadow: 0 2px 10px var(--shadow-1);
+    cursor: pointer;
 }
 
 .customer-cards > button:hover{
@@ -102,47 +92,6 @@ hr {
     transform: scale(1.1);
 }
 
-/* news */
-.header {
-    font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-
-.news-customer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-image: url('/src/img/farmers-bg.png');
-    background-position: center;
-}
-
-.news{
-    background-color: rgba(238, 237, 237, 0.662);
-    box-shadow: 0 4px 8px var(--shadow-1);
-    border-radius: 10px;
-    width: 700px;
-    margin: 20px;
-    padding: 10px 50px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-grow: 1;
-}
-
-.news > .title{
-    font-size: large;
-    font-weight: bold;
-    padding-bottom: 5px;
-}
-
-.news p {
-    align-items: center;
+.logBtn:hover {
+    background-color: var(--hover);
 }
