--- a/src/style/admin/adminhome.css
+++ b/src/style/admin/adminhome.css
@@ -38,6 +38,7 @@
     justify-content: space-between;
     flex-grow: 1;
     padding-left: 50px;
+    font-weight: bold;
 }
 
 /* logo */
@@ -79,22 +80,25 @@ hr {
 /* cards displayed in admin home page */
 .admin-container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
   
 .admin-cards{
     background-color: rgb(238, 237, 237);
     box-shadow: 0 4px 8px var(--shadow-1);
     border-radius: 10px;
-    width: 350px;
     height: 250px;
-    margin: 30px 20px 0px 20px;
+    margin: 30px 10px 0 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .admin-cards > * {
