--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -4,7 +4,7 @@ footer{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    flex-wrap: wrap;
     height: 100px;
 }
 
@@ -32,7 +32,11 @@ hr {
 }
 
 .socials {
-    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .socials > .icon {
